Use lighter font weight for smaller button dropdown button

--- a/src/components/button-dropdown/button-dropdown.css
+++ b/src/components/button-dropdown/button-dropdown.css
@@ -41,6 +41,7 @@
   height: var(--buttonDropdown-size-small);
   padding: 0 calc(var(--buttonDropdown-size-small) / 2);
   font-size: 12px;
+  font-weight: 400;
 }
 
 .size-medium {
