--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -20,7 +20,7 @@
   position: relative;
   align-items: center;
   border: none;
-  border-radius: 4px;
+  border-radius: var(--border-radius-button);
   cursor: pointer;
   display: inline-block;
   font-weight: 500;
@@ -282,11 +282,13 @@
 }
 
 .grouped:first-of-type .button {
-  border-radius: 4px 0 0 4px;
+  border-top-left-radius: var(--border-radius-button);
+  border-bottom-left-radius: var(--border-radius-button);
 }
 
 .grouped:last-of-type .button {
-  border-radius: 0 4px 4px 0;
+  border-top-right-radius: var(--border-radius-button);
+  border-bottom-right-radius: var(--border-radius-button);
   border-right-width: 2px;
 }
 
@@ -302,7 +304,7 @@
   border-left: 0;
 }
 
-.grouped.round:first-child {
+.grouped:first-child {
   border-bottom-left-radius: 5px;
   border-top-left-radius: 5px;
 }
