Wrap button icon component in InlineFlex layout component to ensure it is always vertically aligned

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -244,7 +244,7 @@
   opacity: 1;
   transition: 0.4s opacity linear;
   height: 100%;
-  display: inline-block;
+  display: inline-flex;
   padding: 0;
   margin-right: 0;
   margin-left: 0;
