--- a/src/design-tokens/tokens.css
+++ b/src/design-tokens/tokens.css
@@ -6,7 +6,7 @@
   --pink700: rgb(195, 74, 87);
   --snow: rgb(249, 250, 252);
   --green: rgb(62, 179, 138);
-  --orange300: rgb(255, 237, 180);
+  --orange300: rgb(255, 246, 216);
   --orange400: rgb(255, 206, 94);
   --orange500: rgb(253, 184, 28);
   --orange600: rgb(246, 175, 13);
@@ -16,7 +16,7 @@
   --charcoal: rgb(55, 69, 97);
   --silver: rgb(176, 186, 195);
   --orange: rgb(253, 184, 28);
-  --green300: rgb(216, 240, 232);
+  --green300: rgb(229, 247, 241);
   --red: rgb(234, 95, 110);
   --green400: rgb(79, 210, 164);
   --green500: rgb(62, 179, 138);
@@ -34,7 +34,7 @@
   --none: "";
   --purple400: rgb(159, 129, 218);
   --slate: rgb(84, 103, 137);
-  --blue300: rgb(193, 244, 255);
+  --blue300: rgb(232, 250, 252);
   --purple500: rgb(138, 112, 189);
   --blue: rgb(84, 195, 219);
   --blue400: rgb(101, 210, 234);
@@ -44,7 +44,7 @@
   --purple700: rgb(96, 78, 131);
   --blue600: rgb(77, 184, 207);
   --purple: rgb(138, 112, 189);
-  --pink300: rgb(251, 223, 226);
+  --pink300: rgb(255, 235, 238);
   --current-color: "currentColor";
   --blue700: rgb(43, 167, 194);
   --navy300: rgb(249, 250, 252);
@@ -69,8 +69,8 @@
   --border-radius: 4px;
   --border-radius-input: 4px;
   --border-radius-button: 4px;
-  --info: #c3f9ff;
-  --confirmation: #e4f7f1;
-  --error: #ffebee;
-  --warning: #fff5ce;
+  --info: rgb(232, 250, 252);
+  --confirmation: rgb(229, 247, 241);
+  --error: rgb(255, 235, 238);
+  --warning: rgb(255, 246, 216);
 }
