Add max width grid to constants

--- a/src/design-tokens/tokens.css
+++ b/src/design-tokens/tokens.css
@@ -73,4 +73,5 @@
   --confirmation: rgb(229, 247, 241);
   --error: rgb(255, 235, 238);
   --warning: rgb(255, 246, 216);
+  --grid-max-width: 1200;
 }
