--- a/src/design-tokens/tokens.css
+++ b/src/design-tokens/tokens.css
@@ -69,7 +69,7 @@
   --border-radius: 4px;
   --border-radius-input: 4px;
   --border-radius-button: 4px;
-  --box-shadow-level-0: "0";
+  --box-shadow-level-0: "none";
   --box-shadow-level-1: "0 3px 6px rgba(140, 140, 140, 0.08)";
   --box-shadow-level-2: "0 10px 25px rgba(140, 140, 140, 0.14)";
   --box-shadow-level-3: "0 12px 25px rgba(140, 140, 140, 0.21)";
