--- a/src/components/button/button.core.css
+++ b/src/components/button/button.core.css
@@ -5,6 +5,7 @@
   border-radius: 4px;
   cursor: pointer;
   font-weight: 500;
+  display: flex;
   align-items: center;
   vertical-align: middle;
   transition: background 0.3s ease-out, color 0.2s ease-out;
