Rename secondaryLabel prop to hint

--- a/src/components/checkbox/checkbox.core.css
+++ b/src/components/checkbox/checkbox.core.css
@@ -82,7 +82,7 @@
   color: var(--navy700);
 }
 
-.ui-checkbox__secondary-label {
+.ui-checkbox__hint {
   font-size: 12px;
   font-weight: 400;
   color: var(--navy600);
