Add invalidity pseudoclasses to select and input

--- a/src/components/input/input.core.css
+++ b/src/components/input/input.core.css
@@ -74,10 +74,12 @@
   }
 }
 
+.ui-input:valid,
 .ui-input--valid {
   border-color: var(--green500) !important;
 }
 
+.ui-input:invalid,
 .ui-input--invalid {
   border-color: var(--pink500) !important;
 }
