--- a/src/components/select/select.core.css
+++ b/src/components/select/select.core.css
@@ -18,6 +18,10 @@
     outline: 0;
     border: 1px solid var(--blue500);
   }
+
+  &:invalid {
+    border: 1px solid var(--pink500);
+  }
 }
 
 .ui-select:disabled,
