--- a/src/components/select/select.react.css
+++ b/src/components/select/select.react.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2px 10px;
-  height: 40px;
+  padding: 0;
+  height: 34px;
 }
 
 .ui-select__chevron {
