--- a/src/styles/kalo-ui-base.css
+++ b/src/styles/kalo-ui-base.css
@@ -1,7 +1,7 @@
-/** Base Styles
- **
- ** Note: with 62.5% font size, 1.5rem = 15px
- **/
+/**
+ * BASE STYLES
+ * Note: with 62.5% font size, 1.5rem = 15px
+ */
 
 * {
   box-sizing: border-box;
