--- a/src/styles/kalo-ui-transitions.css
+++ b/src/styles/kalo-ui-transitions.css
@@ -1,3 +1,8 @@
+/**
+ * COMMONLY USED TRANSITIONS
+ * This is mainly used in conjunction with ReactTransitionGroup
+ */
+
 .t-scale-enter {
   opacity: 0.01;
   transform: scale(0);
