--- a/src/styles/kalo-ui-base.css
+++ b/src/styles/kalo-ui-base.css
@@ -14,6 +14,12 @@
   outline: none;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   overflow-y: scroll;
   font-size: 62.5%;
@@ -33,6 +39,7 @@ html {
 body {
   background-color: #fff;
   height: 100%;
+  font-family: 'WebFaktSoftPro', sans-serif;
 }
 
 /** Typography **/
