Add default font weight and size

--- a/src/styles/kalo-ui-base.css
+++ b/src/styles/kalo-ui-base.css
@@ -40,6 +40,8 @@ body {
   background-color: #fff;
   height: 100%;
   font-family: 'WebFaktSoftPro', sans-serif;
+  font-size: 1.6rem;
+  font-weight: 400;
 }
 
 /** Typography **/
