--- a/src/design-tokens/tokens.css
+++ b/src/design-tokens/tokens.css
@@ -39,13 +39,13 @@
   --blue: rgb(84, 195, 219);
   --blue400: rgb(101, 210, 234);
   --purple600: rgb(119, 95, 168);
-  --inherit: "inherit";
+  --inherit: inherit;
   --blue500: rgb(84, 195, 219);
   --purple700: rgb(96, 78, 131);
   --blue600: rgb(77, 184, 207);
   --purple: rgb(138, 112, 189);
   --pink300: rgb(251, 223, 226);
-  --current-color: "currentColor";
+  --current-color: currentColor;
   --blue700: rgb(43, 167, 194);
   --navy300: rgb(249, 250, 252);
   --navy400: rgb(198, 199, 216);
@@ -69,21 +69,21 @@
   --border-radius: 4px;
   --border-radius-input: 4px;
   --border-radius-button: 4px;
-  --box-shadow-level-0: "none";
-  --box-shadow-level-1: "0 3px 6px rgba(140, 140, 140, 0.08)";
-  --box-shadow-level-2: "0 10px 25px rgba(140, 140, 140, 0.14)";
-  --box-shadow-level-3: "0 12px 25px rgba(140, 140, 140, 0.21)";
-  --box-shadow-level-4: "0 14px 25px rgba(140, 140, 140, 0.27)";
-  --input-hover-border: "1px solid #B0BAC3";
-  --input-border-radius: "4px";
-  --input-active-border: "1px solid #54C3DB";
-  --input-readonly-border: "1px dashed #D0D8DF";
-  --input-disabled-color: "#546789";
-  --input-readonly-background: "#F9FAFC";
-  --input-disabled-border: "1px solid #D0D8DF";
-  --input-readonly-color: "#546789";
-  --input-disabled-background: "#F9FAFC";
-  --input-default-border: "1px solid #D0D8DF";
+  --box-shadow-level-0: none;
+  --box-shadow-level-1: 0 3px 6px rgba(140, 140, 140, 0.08);
+  --box-shadow-level-2: 0 10px 25px rgba(140, 140, 140, 0.14);
+  --box-shadow-level-3: 0 12px 25px rgba(140, 140, 140, 0.21);
+  --box-shadow-level-4: 0 14px 25px rgba(140, 140, 140, 0.27);
+  --input-hover-border: 1px solid #B0BAC3;
+  --input-border-radius: 4px;
+  --input-active-border: 1px solid #54C3DB;
+  --input-readonly-border: 1px dashed #D0D8DF;
+  --input-disabled-color: rgb(84, 103, 137);
+  --input-readonly-background: rgb(249, 250, 252);
+  --input-disabled-border: 1px solid #D0D8DF;
+  --input-readonly-color: rgb(84, 103, 137);
+  --input-disabled-background: rgb(249, 250, 252);
+  --input-default-border: 1px solid #D0D8DF;
   --info: rgb(232, 250, 252);
   --confirmation: rgb(229, 247, 241);
   --error: rgb(255, 235, 238);
@@ -103,5 +103,5 @@
   --button-secondary-hover-background-color: rgb(84, 103, 137);
   --button-secondary-active-background-color: rgb(55, 69, 97);
   --button-secondary-focus-shadow: rgb(208, 216, 223);
-  --table-default-border: "1px solid #EEF4FA";
+  --table-default-border: 1px solid #EEF4FA;
 }
