--- a/src/styles/kalo-ui-base.css
+++ b/src/styles/kalo-ui-base.css
@@ -39,7 +39,7 @@ html {
 body {
   background-color: #fff;
   height: 100%;
-  font-family: 'WebFaktSoftPro', sans-serif;
+  font-family: var(--font-family-text);
   font-size: 1.6rem;
   font-weight: 400;
 }
