--- a/src/components/field-label/field-label.core.css
+++ b/src/components/field-label/field-label.core.css
@@ -1,15 +1,13 @@
 .ui-field-label {
-  font-size: var(--font-size-text-small);
-  font-weight: var(--font-weight-semibold);
-
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--navy600);
   display: inline-block;
   vertical-align: bottom;
   margin-bottom: 4px;
-  margin-right: 0;
   cursor: inherit;
   text-align: unset;
   text-decoration: inherit;
-  color: var(--navy600);
   text-overflow: initial;
   overflow: visible;
   white-space: pre-wrap;
