--- a/src/components/field-validation/field-validation.core.css
+++ b/src/components/field-validation/field-validation.core.css
@@ -1,6 +1,6 @@
 .ui-field-validation {
-  font-weight: var(--font-weight-semibold);
-  font-size: var(--font-size-text-x-small);
+  font-weight: 500;
+  font-size: 1.2rem;
   color: var(--pink500);
   margin-top: 4px;
 }
