--- a/src/styles/kalo-ui-typography.css
+++ b/src/styles/kalo-ui-typography.css
@@ -3,6 +3,38 @@
   font-weight: 400;
 }
 
+.heading--800 {
+  font-size: 2.4rem;
+  line-height: 2.6rem;
+  font-weight: 700;
+}
+
+.heading--700 {
+  font-size: 2rem;
+  line-height: 2.2rem;
+  font-weight: 500;
+}
+
+.heading--600 {
+  font-size: 1.6rem;
+  line-height: 2.8rem;
+  font-weight: 600;
+}
+
+.heading--500 {
+  font-size: 1.4rem;
+  line-height: 1.6rem;
+  font-weight: 500;
+}
+
+.heading--400 {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.2rem;
+  margin-top: 1.2rem;
+  text-transform: uppercase;
+}
+
 strong,
 b {
   font-weight: 600;
@@ -24,4 +56,8 @@ p {
 
 p:first-child {
   margin-top: 0;
+}
+
+a {
+  color: var(--purple500);
 }
