--- a/src/components/heading/heading.core.css
+++ b/src/components/heading/heading.core.css
@@ -5,32 +5,36 @@
   vertical-align: top;
 }
 
+.heading--800,
+.heading--700,
+.heading--600,
+.heading--500,
+.heading--400 {
+  color: var(--navy700);
+}
+
 .heading--800 {
   font-size: 2.4rem;
   line-height: 2.6rem;
   font-weight: 700;
-  /* margin-top: 2.6rem; */
 }
 
 .heading--700 {
   font-size: 2rem;
   line-height: 2.2rem;
   font-weight: 500;
-  /* margin-top: 2.2rem; */
 }
 
 .heading--600 {
   font-size: 1.6rem;
   line-height: 2.8rem;
   font-weight: 600;
-  /* margin-top: 2.8rem; */
 }
 
 .heading--500 {
   font-size: 1.4rem;
   line-height: 1.6rem;
   font-weight: 500;
-  /* margin-top: 1.6rem; */
 }
 
 .heading--400 {
