--- a/src/styles/kalo-ui-base.css
+++ b/src/styles/kalo-ui-base.css
@@ -42,6 +42,7 @@ body {
   font-family: var(--font-family-text);
   font-size: 1.6rem;
   font-weight: 400;
+  color: var(--navy600);
 }
 
 /** Typography **/
@@ -63,9 +64,12 @@ hr {
 }
 
 a {
+  color: var(--blue600);
   text-decoration: none;
-  color: var(--pink500);
-  line-height: inherit;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 /** Sane defined list default */
