--- a/src/styles/kalo-ui-colors.css
+++ b/src/styles/kalo-ui-colors.css
@@ -149,3 +149,11 @@
 .color-navy700 {
   color: var(--navy700);
 }
+
+.color-currentColor {
+  color: currentColor;
+}
+
+.color-none {
+  color: none;
+}
