--- a/src/components/heading/heading.core.css
+++ b/src/components/heading/heading.core.css
@@ -5,39 +5,43 @@
   vertical-align: top;
 }
 
-.heading--800,
-.heading--700,
-.heading--600,
-.heading--500,
-.heading--400 {
+.heading--interactive {
+  cursor: pointer;
+}
+
+.heading--extra-large,
+.heading--large,
+.heading--medium,
+.heading--small,
+.heading--extra-small {
   color: var(--navy700);
 }
 
-.heading--800 {
+.heading--extra-large {
   font-size: 2.4rem;
   line-height: 2.6rem;
   font-weight: 700;
 }
 
-.heading--700 {
+.heading--large {
   font-size: 2rem;
   line-height: 2.2rem;
   font-weight: 500;
 }
 
-.heading--600 {
+.heading--medium {
   font-size: 1.6rem;
   line-height: 2.8rem;
   font-weight: 600;
 }
 
-.heading--500 {
+.heading--small {
   font-size: 1.4rem;
   line-height: 1.6rem;
   font-weight: 500;
 }
 
-.heading--400 {
+.heading--extra-small {
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.2rem;
