Shrink white space in field labels

--- a/src/components/field-label/field-label.core.css
+++ b/src/components/field-label/field-label.core.css
@@ -10,6 +10,6 @@
   text-decoration: inherit;
   text-overflow: initial;
   overflow: visible;
-  white-space: pre-wrap;
+  white-space: nowrap;
   word-break: break-word;
 }
