--- a/src/components/field-hint/field-hint.css
+++ b/src/components/field-hint/field-hint.css
@@ -1,6 +1,6 @@
 .ui-field-hint {
   font-size: 1.2rem;
   font-weight: 400;
-  color: var(--navy600);
-  margin-top: 0.8rem;
+  color: var(--grey600);
+  margin-top: 0.4rem;
 }
