--- a/src/components/heading/heading.css
+++ b/src/components/heading/heading.css
@@ -17,30 +17,35 @@
   color: var(--navy700);
 }
 
+// H800
 .heading--extra-large {
   font-size: 2.4rem;
   line-height: 2.6rem;
   font-weight: 700;
 }
 
+// H700
 .heading--large {
   font-size: 2rem;
   line-height: 2.2rem;
   font-weight: 500;
 }
 
+// H600
 .heading--medium {
   font-size: 1.6rem;
   line-height: 2.8rem;
   font-weight: 600;
 }
 
+// H500
 .heading--small {
   font-size: 1.4rem;
   line-height: 1.6rem;
   font-weight: 500;
 }
 
+// H400
 .heading--extra-small {
   font-size: 1rem;
   font-weight: 500;
