Expand modal on mobile

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -22,8 +22,9 @@
 }
 
 .ui-modal__modal {
-  max-width: 620px;
-  min-width: 620px;
+  width: 100%;
+  max-height: 100%;
+  overflow: scroll;
   background-color: var(--white);
   border-radius: 4px;
   flex-grow: 0;
@@ -35,6 +36,12 @@
   &:focus {
     border: 2px solid red;
   }
+
+  @media screen and (min-width: 768px) {
+    min-height: 620px;
+    max-width: 620px;
+    max-height: calc(100% - 96px);
+  }
 }
 
 .ui-modal--open .ui-modal__modal {
@@ -43,17 +50,42 @@
 }
 
 .ui-modal__modal__header {
-  padding: 40px 32px 32px;
+  padding: 24px 24px 16px;
   border-bottom: 1px solid var(--grey300);
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: var(--white);
+
+  @media screen and (min-width: 768px) {
+    padding: 40px 32px 32px;
+  }
+}
+
+.ui-modal__modal__header--fixed {
+  position: sticky;
+  top: 0;
 }
 
 .ui-modal__modal__footer {
-  padding: 32px;
+  padding: 24px;
+  background-color: var(--white);
+
+  @media screen and (min-width: 768px) {
+    padding: 32px;
+  }
+}
+
+.ui-modal__modal__footer--fixed {
+  position: sticky;
+  bottom: 0;
+  border-top: 1px solid var(--grey300);
 }
 
 .ui-modal__modal__main {
-  padding: 32px;
+  padding: 24px;
+
+  @media screen and (min-width: 768px) {
+    padding: 32px;
+  }
 }
