--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: red;
+  background-color: rgba(48, 44, 80, 0.9);
   z-index: 99999; /* Move to token */
   opacity: 0;
   visibility: hidden;
@@ -36,7 +36,7 @@
     max-width: 620px;
     max-height: calc(100% - 96px);
     border-radius: 4px;
-    box-shadow: 0 14px 25px red;
+    box-shadow: 0 14px 25px rgba(48, 44, 80, 0.5);
   }
 }
 
